# py-scrm

./: CODEBUDDY.md  README.md  app_manager.py  cfg.py  main.py  main.spec  pyproject.toml  requirements.txt  scrm_dialog.py  tasks.md
.github/workflows/: package.yml  release.yml
